k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: korean-learning
  namespace: korean-learning
  labels:
    app: korean-learning
spec:
  type: NodePort
  selector:
    app: korean-learning
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30080
      protocol: TCP
