k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: korean-learning
  namespace: korean-learning
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: shawnlin.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: korean-learning
                port:
                  number: 3000
    - host: korean.shawnlin.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: korean-learning
                port:
                  number: 3000
